--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+  <script>
+    var socket = io.connect('http://localhost:3000');
+    
+    socket.on('newScoreToClient', function (data) {
+      console.log("fdsafdsafdsafdsafdsa'");
+    });
+
+    socket.emit('init', { name: "0", lev: "hero.lev" });
+
+  </script>
+</head>
+
+<body>
+  <h1>
+    <%= title %>
+  </h1>
+  <p>Welcome to
+    <%= title %>
+  </p>
+</body>
+
 </html>
