--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,97 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    overflow: hidden;
 }
 
-a {
-  color: #00B7FF;
+body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    overflow-x: hidden;
+    background-color: #2D2926;
+    color: #F4F5F0;
+    font-size: 22px;
+    font-family: 'Emulogic', 'DOSGothic', sans-serif;
+}
+
+body * {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: 1em;
+    font-family: 'Emulogic', 'DOSGothic', sans-serif;
+}
+
+.setUserName {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    align-items: center;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+
+.setUserName>div {
+    width: 100%;
+    height: auto;
+    max-width: 420px;
+    text-align: center;
+}
+
+.setUserName input[type='text'],
+.setUserName button {
+    width: 100%;
+    height: auto;
+}
+
+.gamePlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.gamePlay-pad {
+    width: 50%;
+    height: 50%;
+    position: absolute;
+    bottom: 0px;
+}
+
+.gamePlay-pad-left {
+    left: 0px;
+}
+
+.gamePlay-pad-right {
+    right: 0px;
+}
+
+.inactive{
+    opacity: 0;
+    z-index: -999;
+}
+
+input[type='text'] {
+    border: 1px solid #3b3b3b;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+button {
+    border: 1px solid #3b3b3b;
+    border-radius: 4px;
+    padding: 4px;
 }
