joinGame 테스트 해보자

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,12 @@
             대기중입니다...
         </div>
     </div>
+    <form class="joinGame">
+        <div>
+            <h3>게임에 참가합니까?</h3>
+            <button type="submit">계속한다</button>
+        </div>
+    </form>
     <div class="gamePlay">
         <div id="gamePlay-pad-left" class="gamePlay-pad gamePlay-pad-left">
 
@@ -36,6 +42,7 @@
 
         </div>
     </div>
+
     <script src="/js/index.js"></script>
 </body>
 
