--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ body * {
     font-family: 'Emulogic', 'DOSGothic', sans-serif;
 }
 
-.setUserName {
+.setUserName, .joinGame {
     width: 100%;
     height: 100%;
     position: relative;
@@ -43,7 +43,7 @@ body * {
     top: 0px;
 }
 
-.setUserName>div {
+.setUserName>div, .joinGame>div {
     width: 100%;
     height: auto;
     max-width: 420px;
@@ -51,7 +51,9 @@ body * {
 }
 
 .setUserName input[type='text'],
-.setUserName button {
+.setUserName button,
+.joinGame input[type='text'],
+.joinGame button {
     width: 100%;
     height: auto;
 }
