캐릭터 코르기

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,12 +39,13 @@
     <form class="joinGame">
         <div>
             <h3>게임이 준비되었습니다.</h3>
+            <h4>캐릭터를 선택해주세요.</h4>
             <div class="joinGame-selectCharacter">
                 <div>
-                    <img src="/img/c1/cha_01_left_01.png" alt="">
+                    <img src="/img/c1/cha_01_left_01.png" alt=""><span style="vertical-align: middle; margin-left: 4px;">캐릭터 1</span>
                 </div>
                 <div>
-                    <img src="/img/c2/cha_02_left_01.png" alt="">
+                    <img src="/img/c2/cha_02_left_01.png" alt=""><span style="vertical-align: middle; margin-left: 4px;">캐릭터 2</span>
                 </div>
             </div>
             <button type="submit">계속한다</button>
