--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,11 +114,17 @@ body * {
     text-align: center;
     width: 100%;
     height: 100%;
+    border: 1px solid transparent;
+}
+
+.joinGame .joinGame-selectCharacter div.slick-current img{
+    border: 2px solid #aaa;
 }
 
 .joinGame .joinGame-selectCharacter div img {
     height: 100%;
     display: inline-block;
+    vertical-align: middle;
 }
 
 .gamePlay {
