--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
     <form class="setUserName">
         <div>
             <h3 class="title">당신의 이름을 입력해주세요.</h3>
+            <h4>소리와 진동을 켜주세요 ^^</h4>
             <input placeholder="최대 8글자" maxlength="8" type="text" name="" id="">
             <button type="submit">계속한다</button>
         </div>
